esmfold-tests/src/slurm_logs/slurm-61004668.out
  File "kakawaESM_include_ptm.py", line 46
    with open(os.path.join(output_directory, f"{name}_{ptm}.pdb"), "w") as f:
                                                               ^
SyntaxError: invalid syntax
